--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/dflyboy420/jake-remote#readme",
   "dependencies": {
-    "express": "^4.17.0"
+    "config": "^3.1.0",
+    "express": "^4.17.0",
+    "multer": "^1.4.1",
+    "winston": "^3.2.1",
+    "winston-timestamp-colorize": "^1.0.2"
   }
 }
