--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dflyboy420/jake-remote#readme",
   "dependencies": {
+    "async": "^2.6.2",
     "config": "^3.1.0",
     "express": "^4.17.0",
     "multer": "^1.4.1",
