--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "config": "^3.1.0",
     "express": "^4.17.0",
     "multer": "^1.4.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.6",
     "winston": "^3.2.1",
     "winston-timestamp-colorize": "^1.0.2"
   }
