--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "async": "^2.6.2",
     "config": "^3.1.0",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
+    "jszip": "^3.2.1",
     "multer": "^1.4.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6",
