--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^2.6.2",
     "config": "^3.1.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "jszip": "^3.2.1",
     "multer": "^1.4.1",
     "mysql2": "^1.6.5",
